<resources>
    <string name="app_name">Sitter.</string>
    <string name="title_publish_request">Publish Request</string>
    <string name="title_set_profile">Set Profile</string>
    <string name="title_login_activity">Login</string>
    <string name="title_sign_up_activity">Sign Up</string>
    <string name="title_manage_requests_babysitter">Babysitter - Manage Requests</string>
    <string name="title_manage_requests_parent">Manage Requests</string>
    <string name="title_connections">Connections</string>
    <string name="comment_hint">Add a comment… (Optional)</string>
    <string name="payment_title">Your chosen payment (ph): </string>
    <string name="publish_request_button">PUBLISH</string>
    <string name="action_settings">Settings</string>
    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="welcome_message">Welcome, %1$s! \nSet Your Profile</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>

    <string name="facebook_app_id">256981896294206</string>
    <string name="fb_login_protocol_scheme">fb256981896294206</string>

    <string name="logout_text">Sign out</string>
    <string name="title_activity_set_profile">SetProfile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Join us and start connecting</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="name_of_approver">Name: </string>
    <string name="name_approver_title"> John</string>
    <string name="mobility_ans">Mobility: </string>
    <string name="yes">Yes</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="date_title">Date</string>
    <string name="select_location">Select Location</string>
    <string name="itemRequestDateTitle">Date: </string>
    <string name="itemRequestTimeTitle">Time: </string>
    <string name="itemRequestDescriptionTitle">Description: </string>
    <string name="upcoming_requests_title">Upcoming Requests</string>
    <string name="incoming_requests_title">Incoming Requests</string>
    <string name="approved_requests_title">Approved Requests</string>
    <string name="history_requests_title">History Requests</string>
    <string name="parent">Parent</string>
    <string name="babysitter">Babysitter</string>
    <string name="set_profile_title_babysitter_or_parent">Who Are You?</string>
    <string name="title_phone_number">Enter your phone number</string>
    <string name="babysitter_mobility_switch">Has Car</string>
    <string name="my_connections">My Connections</string>
    <string name="recommendations_title">Recommended For You</string>
    <string name="add_new_connection">Add new Connection</string>
    <string name="load_picture_button_text">Load Picture</string>
    <string name="hint_phone_number">+97254777777</string>
    <string name="location_title">Location:</string>
    <string name="no_available_recommendations">No available recommendations</string>
    <string name="no_available_connections">No available connections</string>
    <string name="no_available_approved_requests">No available approved requests</string>
    <string name="no_available_archived_requests">No available archived requests</string>
    <string name="no_available_incoming_requests">no_available_incoming_requests</string>
    <string name="empty_description"> No description</string>
    <string name="title_connection_add">Enter babysitter phone number</string>

</resources>