<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@drawable/curve_shape"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearItemVertical"
        android:layout_width="277dp"
        android:layout_height="139dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/approverRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestApproverTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_approver"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" Name of Babysitter"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDateTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" 19/10/2020"
                android:inputType="date"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestTimeTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" 5PM - 8PM"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearMobility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestMobilityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobility_ans"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_mobility_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" No"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDescriptionTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_desc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/empty_description"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>