<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingBottom="70dp"
    tools:context=".ui.parent.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upcoming_requests_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/upcoming_requests_title"
            tools:background="#009900" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_upcoming_requests"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/approved_requests_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/approved_requests_title"
            tools:background="#009900" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_approved_requests"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/history_requests_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/history_requests_title"
            tools:background="#009900" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_history_requests"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


    </LinearLayout>
</ScrollView>




















