<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connectionsLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.parent.home.HomeFragment">

    <TextView
        android:id="@+id/my_connections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/my_connections"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_my_connections"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_connection"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_connection_button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/add_connection_img" />

        <EditText
            android:id="@+id/edit_text_add_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter the phone number"
            android:inputType="phone" />

    </LinearLayout>


    <TextView
        android:id="@+id/recommendations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/recommendations_title"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_recommendations"
        android:layout_width="match_parent"
        android:layout_height="100dp" />


</LinearLayout>