<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearItemVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDateTitle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemRequestDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="19/10/2020"
                android:inputType="date"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestTimeTitle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemRequestTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="5PM-8PM"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDescriptionTitle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemRequestDescriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/empty_description"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lior Kesten"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="85dp"
        android:layout_height="85dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="150dp">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardCornerRadius="150dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcer"
                android:background="@drawable/custom_img_btn"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/status_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text=""
        android:textColor="#F10A0A" />

</LinearLayout>