<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearItemVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDateTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_approved_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="19/10/2020"
                android:inputType="date"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestTimeTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_approved_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="5PM-8PM"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDescriptionTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_approved_desc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/empty_description"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/item_babysitter_request_approved_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lior Kesten"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="85dp"
        android:layout_height="85dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="150dp">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardCornerRadius="150dp">

            <ImageView
                android:id="@+id/item_babysitter_request_approved_profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcer" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/item_babysitter_request_approved_calendar_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/ic_calendar_black"
            app:tint="@color/black" />
        />

        <ImageButton
            android:id="@+id/item_babysitter_request_approved_cancel_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="#FF0000" />

    </LinearLayout>

</LinearLayout>