<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearItemVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDateTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" 19/10/2020"
                android:inputType="date"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestTimeTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" 5PM-8PM"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_request_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Parent: "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_request_name_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/empty_description"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRequestDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemRequestDescriptionTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_babysitter_request_archived_desc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/empty_description"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginRight="48dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="150dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardCornerRadius="150dp">

                <ImageView
                    android:id="@+id/item_babysitter_request_archived_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_picture_icon" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>